tests/NormalTests/paczka1/fuzzy1/42632596.err
Error in line 2: KHNQ2y6ScG S220 84,1
Error in line 8: S220 S220 17,9
Error in line 13: S220 S456 91,9
Error in line 25: S220 S220 37,8
Error in line 30: KHNQ2y6ScG A389 55,1
Error in line 38: KHNQ2y6ScG S220 0,2
